--- a/css/style.css
+++ b/css/style.css
@@ -29,10 +29,13 @@
   border: 3px solid #f0f0f0;
 }
 
-body {
+html, body {
   background: #0d1224;
   font-family: var(--font);
--ms-overflow-style: scrollbar; 
+  -ms-overflow-style: scrollbar;
+  overflow-x: hidden;
+  width: 100%;
+  max-width: 100vw;
 }
 
 a {
@@ -90,6 +93,8 @@ nav {
   top: -1px;
   left: 0;
   right: 0;
+  width: 100%;
+  max-width: 100vw;
 }
 
 .nav-item .active {
